# transfer

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
dev/: steps-to-container.md  steps-to-psql.md  steps-to-sea-orm.md  technologies.md
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
proto/: auth.proto  login.proto  transfer.proto  user.proto
src/: client.rs  common.rs  server.rs
src/entities/: mod.rs  objects.rs  prelude.rs  users.rs
src/tables/: mod.rs  prelude.rs  things.rs  users.rs
