[package]
name = "transfer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "transfer-server"
path = "src/server.rs"

[[bin]]
name = "transfer-client"
path = "src/client.rs"

[dependencies]
tonic = { version = "0.7", features = ["tls"] }
prost = "0.10"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "3.2.6", features = ["derive"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
anyhow = "1.0"
jsonwebtoken = { version = "8.1.1", features = ["use_pem"] }
serde = {version = "1.0.137", features = ["derive"] }
regex = "1.5.6"
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.7"
