[package]
name = "transfer"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[[bin]]
name = "transfer-server"
path = "src/server.rs"

[[bin]]
name = "transfer-client"
path = "src/client.rs"

[dependencies]
tonic = { version = "0.7", features = ["tls"] }
prost = "0.10"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "3.2.6", features = ["derive"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
anyhow = "1.0"
jsonwebtoken = { version = "8.1.1", features = ["use_pem"] }
serde = { version = "1.0.137", features = ["derive"] }

sea-orm = { version = "^0", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }

# [dependencies.uuid] # I guess this isn't necessary as sea-orm already exposes it.
# version = "1.1.2"
# features = [
#   "v4",                # Lets you generate random UUIDs
#   "fast-rng",          # Use a faster (but still sufficiently random) RNG
#   "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
# ]

# entity = { path = "entity" }
# migration = { path = "migration" } # depends on your needs

[build-dependencies]
tonic-build = "0.7"
